Update requests for projects and branches; detailed grants; unauthorized results
